# store0

./: LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
src/store0/: model.py
src/store0/lstm2/: saved_model.pb
src/store0/lstm2/variables/: variables.data-00000-of-00001  variables.index
tests/: test_model.py
