[metadata]
name = store0-alisonparedes
version = 0.0.1
author = Alison Paredes
author_email = 20asp3@queensu.ca
description = A trained model of the STORE:0 location in COVI-AgentSim
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alisonparedes/store0
project_urls =
    Bug Tracker = https://github.com/alisonparedes/store0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src